<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.desafio11.MainActivity1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluci_n_dela_ecuaci_n_cuadr_tica"
            android:background="#2ECC71"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_b_2_4ac_2a"
            android:background="#2ECC71"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_primer_numero_a"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="15dp" />

        <EditText
            android:id="@+id/txtnumA"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero_a"
            android:inputType="text|number|numberSigned|numberDecimal"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_segundo_numero_b"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="15dp" />

        <EditText
            android:id="@+id/txtnumB"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero_b"
            android:inputType="number|numberSigned|numberDecimal"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:importantForAutofill="no"
            android:paddingStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_tercer_numero_c"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="15dp" />

        <EditText
            android:id="@+id/txtnumC"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numero_c"
            android:inputType="number|numberSigned|numberDecimal"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:paddingStart="15dp" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:background="#48C9B0"
            android:onClick="calcularEcuacion"
            android:text="@string/calcular"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>